# liburdf

./: .bazelrc  .clang-format  .gitattributes  .gitignore  .pre-commit-config.yaml  AUTHORS  AUTHORS.md  AUTHORS.txt  BUILD.bazel  CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  Dockerfile  LICENSE.txt  MODULE.bazel  README.md  setup.py  urdf.pc.in
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.yaml
.github/workflows/: bazel.yml  cmake.yml
bazel/: pybind_defs.bzl  urdf_tests.bzl
cmake/: CompilerChecks.cmake  CompilerExtraFlags.cmake  CompilerWarningFlags.cmake  Dependencies.cmake  Findassimp.cmake  Findliburdf.cmake  Findurdf.cmake  Install.cmake  LiburdfConfig.cmake.in  Version.cmake  Windows.cmake  urdfConfig.cmake.in
docs/: _config.yml  changelog.md  contributing.md  examples.md  faq.md  index.md  pkgconfig.md  platform-support.md  quickstart-bazel.md  quickstart-cmake.md  reference.md
include/: urdf.h
include/urdf/common/: geometry_base.h  object_base.h  parser_base.h  property_base.h  property_parser.h  sensor_base.h
include/urdf/core/: box.h  camera.h  collision.h  color.h  cylinder.h  data_type.h  entity.h  image.h  inertia.h  joint.h  joint_calibration.h  joint_dynamics.h  joint_limits.h  joint_mimic.h  joint_safety.h  link.h  material.h  mesh.h  model.h  pose.h  sphere.h  transmission.h  visual.h  world.h
include/urdf/detail/: graphiz_graph.h  internal_graph.h
include/urdf/internal/: box_parser.h  camera_parser.h  collision_parser.h  color_parser.h  cylinder_parser.h  data_type_parser.h  geometry_parser.h  inertia_parser.h  joint_parser.h  link_parser.h  material_parser.h  mesh_parser.h  model_parser.h  pose_parser.h  sphere_parser.h  transmission_parser.h  urdf_parser.h  version.h  version_parser.h  visual_parser.h  world_parser.h
include/urdf/utility/: math_utils.h  string_utils.h
python/: CMakeLists.txt
python/src/: CMakeLists.txt  pyurdf.cc  pyurdf_parser.cc
python/test/: pyurdf_parser_test.py
scripts/: CMakeLists.txt
scripts/src/: CMakeLists.txt  urdf_parse.cc  urdf_to_graphiz.cc
scripts/test/assets/: iiwa14.urdf
src/urdf/: CMakeLists.txt
src/urdf/common/: CMakeLists.txt  property_parser.cc
src/urdf/core/: CMakeLists.txt  box.cc  camera.cc  collision.cc  color.cc  cylinder.cc  data_type.cc  image.cc  inertia.cc  joint.cc  joint_calibration.cc  joint_dynamics.cc  joint_limits.cc  joint_mimic.cc  joint_safety.cc  link.cc  material.cc  mesh.cc  model.cc  pose.cc  sphere.cc  transmission.cc  visual.cc  world.cc
src/urdf/detail/: CMakeLists.txt  graphiz_graph.cc  internal_graph.cc
src/urdf/internal/: CMakeLists.txt  box_parser.cc  camera_parser.cc  collision_parser.cc  color_parser.cc  cylinder_parser.cc  data_type_parser.cc  geometry_parser.cc  inertia_parser.cc  joint_parser.cc  link_parser.cc  material_parser.cc  mesh_parser.cc  model_parser.cc  pose_parser.cc  sphere_parser.cc  transmission_parser.cc  urdf_parser.cc  version.cc  version_parser.cc  visual_parser.cc
src/urdf/utility/: CMakeLists.txt  math_utils.cc  string_utils.cc
test/: BUILD.bazel  CMakeLists.txt  camera_test.cc  collision_parser_test.cc  color_test.cc  geometry_parser_test.cc  inertia_parser_test.cc  internal_graph_test.cc  joint_parser_test.cc  joint_test.cc  link_parser_test.cc  link_test.cc  material_parser_test.cc  math_utils_test.cc  mesh_test.cc  model_parser_test.cc  model_test.cc  pose_parser_test.cc  pose_test.cc  property_parser_test.cc  sensor_test.cc  string_utils_test.cc  transmission_test.cc  version_test.cc  visual_parser_test.cc  world_parser_test.cc  world_test.cc
test/assets/: joint2.urdf  simple.urdf  simple_test.urdf  simple_test2.urdf  spot_boston_dynamics.urdf
tools/: build-windows.bat  update-common.bat  update-common.sh
vcpkg/: portfile.cmake  usage  vcpkg.json
